--- a/index.html
+++ b/index.html
@@ -1,23 +1,1 @@
-<!doctype html>
-<html lang="">
-
-<head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width,initial-scale=1">
-  <link rel="apple-touch-icon" sizes="180x180" href="/Runliq/apple-touch-icon.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="/Runliq/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="/Runliq/favicon-16x16.png">
-  <link rel="manifest" href="/Runliq/manifest.webmanifest">
-  <title>Runliq</title>
-  <script defer="defer" src="/Runliq/js/chunk-vendors.e634544f.js"></script>
-  <script defer="defer" src="/Runliq/js/app.d080119c.js"></script>
-  <link href="/Runliq/css/app.1aa1ce5b.css" rel="stylesheet">
-</head>
-
-<body><noscript><strong>We're sorry but Runliq doesn't work properly without JavaScript enabled. Please enable it to
-      continue.</strong></noscript>
-  <div id="app"></div>
-</body>
-
-</html>
+<!doctype html><html lang=""><head><meta charset="utf-8"><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="viewport" content="width=device-width,initial-scale=1"><link rel="apple-touch-icon" sizes="180x180" href="/RunLiq/apple-touch-icon.png"><link rel="icon" type="image/png" sizes="32x32" href="/RunLiq/favicon-32x32.png"><link rel="icon" type="image/png" sizes="16x16" href="/RunLiq/favicon-16x16.png"><link rel="manifest" href="/RunLiq/manifest.webmanifest"><title>Runliq</title><script defer="defer" src="/RunLiq/js/chunk-vendors.53e6b4b6.js"></script><script defer="defer" src="/RunLiq/js/app.17eeb3e2.js"></script><link href="/RunLiq/css/chunk-vendors.b860836d.css" rel="stylesheet"><link href="/RunLiq/css/app.85639fed.css" rel="stylesheet"></head><body><noscript><strong>We're sorry but Runliq doesn't work properly without JavaScript enabled. Please enable it to continue.</strong></noscript><div id="app"></div></body></html>
