--- a/404.html
+++ b/404.html
@@ -10,9 +10,10 @@
   <link rel="icon" type="image/png" sizes="16x16" href="/Runliq/favicon-16x16.png">
   <link rel="manifest" href="/Runliq/manifest.webmanifest">
   <title>Runliq</title>
-  <script defer="defer" src="/Runliq/js/chunk-vendors.e634544f.js"></script>
-  <script defer="defer" src="/Runliq/js/app.d080119c.js"></script>
-  <link href="/Runliq/css/app.1aa1ce5b.css" rel="stylesheet">
+  <script defer="defer" src="/Runliq/js/chunk-vendors.3284a300.js"></script>
+  <script defer="defer" src="/Runliq/js/app.3d185e84.js"></script>
+  <link href="/Runliq/css/chunk-vendors.b860836d.css" rel="stylesheet">
+  <link href="/Runliq/css/app.e500692d.css" rel="stylesheet">
 </head>
 
 <body><noscript><strong>We're sorry but Runliq doesn't work properly without JavaScript enabled. Please enable it to
